Order table and customer info should now display on the DOM in the checkout page.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,3 +17,11 @@
 .customerForm {
   text-align: left;
 }
+
+.customerInfo {
+  text-align: left;
+}
+
+/* .pizzaTable {
+  text-align: center;
+} */
