--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,13 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-header {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
   background-color: #222;
-  height: 70px;
+  height: 100px;
   padding: 20px;
   color: white;
   margin-bottom: 20px;
@@ -23,6 +26,11 @@
 .customerInfo {
   text-align: left;
 }
+
+/* .cartTotal {
+  position: relative;
+  left: 43%;
+} */
 
 /* .pizzaTable {
   text-align: center;
